箱を複数にできるようになった

--- a/仮開発/index.html
+++ b/仮開発/index.html
@@ -6,13 +6,14 @@
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <script type="text/javascript" src="main.js"></script>
 <script type="text/javascript" src="module_UIControl.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <title>ぴくぴくんに見つかるな！</title>
 <link rel="stylesheet" href="style.css" type="text/css">
 <link rel="icon" href="img/pikupikun.png">
 </head>
-<body style="margin:0px;overflow:hidden" style="-webkit-font-smoothing: none;">
+<body class="fontTest" style="margin:0px;overflow:hidden" style="-webkit-font-smoothing: none;">
         
-      <div>  <button id="buttonToggleBGM">BGM</button><button id="initializeEvent">やり直し</button><br><a>ああ</a><button id="buttonUp" class="buttonCross">↑</button>
+      <div>ぴくぴくんに見つかるな！歩数<button id="buttonToggleBGM">BGM</button><button id="initializeEvent">やり直し</button><br><a>ああ</a><button id="buttonUp" class="buttonCross">↑</button>
         <br><button id="buttonLeft" class="buttonCross">←</button><button id="buttonDown" class="buttonCross">↓</button><button id="buttonRight" class="buttonCross">→</button>
        </div>
        <div> <canvas id="gameDisplay"></canvas><!--<image src = img/gameBoy.png id="gameBoy"></image>-->
